hydra/test/test_examples/type_errors/list.tpc
init {
    bool[10] x = [1,2];
} 
telemetry {} 
check {}